Fixed missing licensing, Updated dataPartitionBitSize to dataChunkSize new 2.0.1-SNAPSHOT version